<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutCurrency1"
        android:layout_width="253dp"
        android:layout_height="68dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <EditText
            android:id="@+id/editValueOneCurrency"
            android:layout_width="213dp"
            android:layout_height="38dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rectangle"
            android:ems="10"
            android:inputType="number"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="114dp"
        android:layout_height="31dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:fontFamily="casual"
        android:text="@string/app_amount_usa"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textInputLayoutCurrency1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutCurrency2"
        android:layout_width="251dp"
        android:layout_height="61dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutCurrency1">

        <EditText
            android:id="@+id/editValueTwo"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="60dp"
            android:layout_weight="1"
            android:background="@drawable/rectangle"
            android:ems="10"
            android:inputType="number"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editValueOneCurrency" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="112dp"
        android:layout_height="34dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:fontFamily="casual"
        android:text="@string/app_rate"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textInputLayoutCurrency2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textCalculateCurrency"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ractangle_background"
        android:gravity="center"
        android:text="@string/app_Caclulate"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutCurrency2" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="126dp"
        android:layout_height="34dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="casual"
        android:text="@string/app_result"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCalculateCurrency" />

    <TextView
        android:id="@+id/textResult"
        android:layout_width="199dp"
        android:layout_height="34dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="172dp"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

</android.support.constraint.ConstraintLayout>